alignment fixes and image tests

--- a/public/css/webcss.css
+++ b/public/css/webcss.css
@@ -162,6 +162,12 @@ p.details b{
 .infoHead {
   font-family: 'Montserrat', serif;
   letter-spacing: 2px;
+  
+}
+
+.infoHeadC {
+  font-family: 'Montserrat', serif;
+  letter-spacing: 2px;
   text-align: center;
 }
 
